# Pollux-Polyglot-Native-Bridge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
docs/: boundary-enforcement.md  language-binding-contract.md  request-response-model.md
src/: lib.rs
